@startuml US04_DM
hide methods
' left to right direction
skinparam classAttributeIconSize 0

class Appointment {
  -date
  ' -VaccineType
}

class Arrival {
  - arrivalDate
}

class Company {
  - designation
}

class Employee {
  - name
  - phoneNumber
  - email
  - password
  - address
  - citizenCardNumber
  - roleId
}

class Receptionist {}

class SNSUser {
  - citizenCard
  - snsNumber
  - name
  - birthDay
  - gender
  - phoneNumber
  - email
  - address
}

class VaccinationCenter {
  - name
  - address
  - emailAddress
  - phoneNumber
  - faxNumber
  - websiteAddress
  - openingHours
  - closingHours
  - slotDuration
  - maximumVaccinesPerSlot
}

class VaccineType {}


Arrival "1" -- "0..1" Appointment : related to >
Arrival "*" -- "*" WaitingRoom : is in >
Appointment "*" -- "1" VaccinationCenter : has >
Appointment "1" -- "1" VaccineType : has 
Company "1" -- "*" Employee : knows >
Company "1" -- "*" VaccinationCenter : knows >
Employee <|-- Receptionist
Receptionist "1" -- "*" Appointment : related to >
Receptionist "1" -- "*" Arrival : registers >
Receptionist "1" -- "*" SNSUser : schedules for >
SNSUser "1" -- "*" Arrival : associated to >
SNSUser "1" -- "*" Appointment : has >
VaccinationCenter "1" -- "1" WaitingRoom : has >

@enduml
